--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ p {
       <span style="pointer-events: none;">Jason Godfrey</span>
     </div>
     <div class="subtitle"><div class="video-wrapper">
-      <video id="myVideo" width="600" height="640"  muted playsinline class="unclickable-video">
+      <video id="myVideo" width="600" height="640"  autoplay muted playsinline class="unclickable-video">
         <source src="https://i.imgur.com/Q6nRu5V.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
